--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ body, html{
 }
 
 .bgimg-1 {
-    background-image: url("../assets/images/landpage.gif");
+    background-image: url("../landpage.gif");
     min-height: 600px;
 }
 
 .bgimg-2 {
-    background-image: url("../assets/images/background4.jpeg");
+    background-image: url("/assets/images/background4.jpeg");
     min-height: 400px;
 }
 
