--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@ body, html{
 }
 
 .bgimg-1 {
-    background-image: url("../images/landpage.gif");
+    background-image: url ("./images/landpage.gif");
     min-height: 600px;
 }
 
 .bgimg-2 {
-    background-image: url("../images/background4.jpeg");
+    background-image: ("../images/background4.jpeg");
     min-height: 400px;
 }
 
 .bgimg-3 {
-    background-image: url("../images/background6.jpg");
+    background-image: ("../images/background6.jpg");
     min-height: 400px;
 }
 
@@ -80,7 +80,7 @@ h3 {
 
 <div class="bgimg-1">
     <div class="caption">
-        <a style="color:transparent" href="assets/start.html"> <span class="border"> DO YOU WANT To KNOW HOW TO GET MORE LEADS</span> </a>
+        <a style="color:transparent" href="assets/start.html"> <span class="border"> DO YOU WANT TO KNOW HOW TO GET MORE LEADS</span> </a>
     </div>
 </div>   
 <div style="color: rgb(31, 30, 30); background-color: white;text-align: center; padding: 50px 80px; text-align: justify">
