--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@ body, html{
 }
 
 .bgimg-1 {
-    background-image: url ("./images/landpage.gif");
+    background-image: url ("../images/landpage.gif");
     min-height: 600px;
 }
 
 .bgimg-2 {
-    background-image: ("../images/background4.jpeg");
+    background-image: url ("../images/background4.jpeg");
     min-height: 400px;
 }
 
 .bgimg-3 {
-    background-image: ("../images/background6.jpg");
+    background-image: url ("../images/background6.jpg");
     min-height: 400px;
 }
 
