--- a/assets/index.html
+++ b/assets/index.html
@@ -5,74 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-<style>
-        
-body, html{
-    height: 100%;
-    margin: 0;
-    font: 400 15px/1.8 "Lato", sans-serif;
-    color: #777
-}
-
-.bgimg-1, .bgimg-2, .bgimg-3 {
-    position: relative;
-    opacity: 0.65;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-
-.bgimg-1 {
-    background-image: url("../assets/images/landpage.gif");
-    min-height: 600px;
-}
-
-.bgimg-2 {
-    background-image: url("../assets/images/background4.jpeg");
-    min-height: 400px;
-}
-
-.bgimg-3 {
-    background-image: url("../assets/images/background6.jpg");
-    min-height: 400px;
-}
-
-
-.caption {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    color: #000;
-}
-
-.caption span.border {
-    background-color: #111;
-    color: #fff;
-    padding: 18px;
-    font-size: 25px;
-    letter-spacing: 10px;
-}
-
-h3 {
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font: 20px "Lato, sans-serif";
-    color: #111;
-}
-
-@media only screen and (max-device-width:1024px) {
-    .bgimg-1, .bgimg-2, .bgimg-3{
-        background-attachment: scroll;
-    }
-}
-
-</style>
-
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
