--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ h3 {
 
 <div class="bgimg-1">
     <div class="caption">
-        <a style="color:transparent" href="start.html"> <span class="border"> DO YOU WANNA KNOW HOW TO GET MORE LEADS</span> </a>
+        <a style="color:transparent" href="assets/start.html"> <span class="border"> DO YOU WANNA KNOW HOW TO GET MORE LEADS</span> </a>
     </div>
 </div>   
 <div style="color: rgb(31, 30, 30); background-color: white;text-align: center; padding: 50px 80px; text-align: justify">
@@ -145,7 +145,7 @@ h3 {
 </div>
 <div class="bgimg-1">
     <div class="caption">
-        <a style="color:transparent" href="start.html"> <span class="border"> SUBSCRIBE</span> </a>
+        <a style="color:transparent" href="assets/start.html"> <span class="border"> SUBSCRIBE</span> </a>
     </div>
 </div>
 
