--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@ body, html{
 }
 
 .bgimg-1 {
-    background-image: url("../assets/images/landpage.gif");
+    background-image: url("./assets/images/landpage.gif");
     min-height: 600px;
 }
 
 .bgimg-2 {
-    background-image: url("../assets/images/background4.jpeg");
+    background-image: url("./assets/images/background4.jpeg");
     min-height: 400px;
 }
 
 .bgimg-3 {
-    background-image: url("../assets/images/background6.jpg");
+    background-image: url("./assets/images/background6.jpg");
     min-height: 400px;
 }
 
