--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
     
 <style>
         
@@ -28,17 +27,17 @@ body, html{
 }
 
 .bgimg-1 {
-    background-image: url("../assets/images/landpage.gif");
+    background-image: url("./assets/images/landpage.gif");
     min-height: 600px;
 }
 
 .bgimg-2 {
-    background-image: url("../assets/images/background4.jpeg");
+    background-image: url("./assets/images/background4.jpeg");
     min-height: 400px;
 }
 
 .bgimg-3 {
-    background-image: url("../assets/images/background6.jpg");
+    background-image: url("./assets/images/background6.jpg");
     min-height: 400px;
 }
 
