--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ h3 {
 </div>
 <div class="bgimg-1">
     <div class="caption">
-        <a style="color:transparent" href="assets/start.html"> <span class="border"> SUBSCRIBE</span> </a>
+        <a style="color:transparent" href="assets/start.html"> <span class="border"> SHOW ME MORE</span> </a>
     </div>
 </div>
 
