--- a/assets/predict.html
+++ b/assets/predict.html
@@ -93,7 +93,7 @@
         }
         
         .bgimg-5 {
-            background-image: url("./images/level.gif");
+            background-image: url("./images/level.GIF");
             min-height: 600px;
         }
         
